# kopki

./: .gitignore  Cargo.toml  LICENSE  README.md
clear_test/: main.rs
examples/camera/: main.rs  shader.wgsl
examples/clear/: main.rs
examples/dynamic_triangle/: main.rs
examples/empty/: main.rs
examples/multiple_windows/: main.rs
examples/raw_wgpu/: main.rs
examples/shapes/: main.rs
examples/texture/: main.rs
examples/transform/: main.rs  shader.wgsl
examples/triangle/: main.rs
examples/uniform/: main.rs
examples/window/: main.rs
src/: camera.rs  context.rs  group.rs  lib.rs  mesh.rs  reexports.rs  render.rs  td_renderer.rs  texture.rs  transform.rs  uniform.rs
src/core/: context.rs  group.rs  mesh.rs  mod.rs  render.rs  texture.rs  uniform.rs
src/graphics/: mod.rs  present.wgsl  shape.rs  shape.wgsl
src/overhaul/: camera.rs  mod.rs  sprite.rs  transform.rs
src/shaders/: present.wgsl
test/: main.rs
tests/camera/: main.rs
tests/clear/: main.rs
tests/texture/: main.rs
tests/triangle/: main.rs
tests/uniform/: main.rs  shader.wgsl
texture_test/: main.rs  shader.wgsl
triangle_test/: main.rs  shader.wgsl
