[package]
name = "kopki"
version = "0.3.5"
edition = "2021"

rust-version = "1.56"
authors = ["sugmaboy<jjmartinodev@outlook.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "a simple graphical engine in wgpu and winit"
repository = "https://github.com/jjmartinodev/kopki"
keywords = ["graphics","gfx"]
categories = ["graphics", "rendering"]

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
glam = "0.25.0"
pollster = "0.3.0"
wgpu = "22.0"
winit = "0.29.10"

[[example]]
name = "clear"
path = "examples/clear/main.rs"
